# manga-tracker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yaml  flake.nix  main.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: approve_dependabot_prs.yaml  ci.yaml  dependabot-uv-lock.yaml  release.yaml  sync-uv-lock.yaml  tracker.yaml  tracker.yml
src/: config.py  logger.py  main.py
src/core/: controllers.py  ports.py  services.py  use_cases.py
src/domain/: models.py
src/infrastructure/database/: connection.py  postgres.py  schema.sql  seed.sql
src/infrastructure/notifications/: discord.py
src/infrastructure/scrapers/: browser.py  factory.py  mangadex.py  parser.py
src/infrastructure/scrapers/js/: extract_chapters.js  extract_manga.js
src/infrastructure/scrapers/plugins/: __init__.py
src/infrastructure/scrapers/plugins/mangadex/: extract_chapters.js  extract_manga.js  scraper.py
supabase/migrations/: 0001_initial_schema.sql  0002_create_manga_sources.sql  0003_data_migration_url_to_sources.sql  0004_consolidate_schema.sql
supabase/seeds/: dev-seed.sql
tests/: conftest.py
tests/doubles/: database.py  notifier.py  parser.py  scraper.py  service.py
tests/fixtures/: mangadex_sample.html
tests/integration/: conftest.py  test_main.py  test_mangadex_scraper.py  test_postgres_repository.py
tests/scenarios/: plan_scenario.py  sync_scenario.py
tests/unit/: test_discord_notifications.py  test_logger.py  test_mangadex_scraper.py  test_parser.py  test_sync_plan.py
tests/unit/core/: test_controllers.py  test_services.py  test_use_cases.py
tests/unit/database/: test_connection.py
tests/unit/domain/: test_models.py
tests/unit/notifications/: test_discord.py
tests/unit/scrapers/: test_factory.py  test_parser.py
