[project]
name = "manga-tracker"
version = "1.0.0"
description = "Automated tracker designed to nofity via discord notifications of new releases of tracked mangas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.5",
    "testcontainers>=4.14.2",
    "types-psycopg2>=2.9.21.20260223",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["__pycache__", "logs", "js", ".venv", ".github"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP"
]

[tool.mypy]
python_version = "3.12"
strict = true
files = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
addopts = "-v"
pythonpath = ["."]

[project.scripts]
manga-tracker = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"src/infrastructure/scrapers/js" = "src/infrastructure/scrapers/js"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
